--- a/man/rls.1
+++ b/man/rls.1
@@ -12,7 +12,7 @@
 .Op Fl l Ar username
 .Op Fl p Ar port
 
-.Sh description
+.Sh DESCRIPTION
 .Nm
 is a program for logging into and for executing commands on a remote machine 
 running 
