Fixed authentication voice missing

--- a/man/rls.7
+++ b/man/rls.7
@@ -31,6 +31,10 @@ File hierarchy and source code organization.
 Configuration file structure and fields.
 
 .It
+.Em Authentication :
+Client authentication.
+
+.It
 .Em Communication :
 Client-Server communication protocol.
 
